# PoGo

./: .gitignore  CMakeLists.txt  README.md
PoGo/: PoGo.sln  PoGo.vcxproj  PoGo.vcxproj.filters  makefile
PoGo/Debug/: vc120.idb
PoGo/Debug/PoGo.tlog/: CL.read.1.tlog  CL.write.1.tlog  PoGo.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PoGo/Release/PoGo.tlog/: CL.read.1.tlog  CL.write.1.tlog  PoGo.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PoGo/src/: Chromosome.cpp  Chromosome.h  CoordinateWrapper.cpp  CoordinateWrapper.h  Coordinates.h  EnumStringMapper.cpp  EnumStringMapper.h  ExistingPeptides.h  FastaEntry.cpp  FastaEntry.h  FastaParser.cpp  FastaParser.h  GTFParser.cpp  GTFParser.h  GeneEntry.cpp  GeneEntry.h  GenomeFastaParser.cpp  GenomeFastaParser.h  Globals.cpp  Globals.h  KmerEntry.h  KmerMap.cpp  KmerMap.h  KmereEntry.h  KmereMap.cpp  KmereMap.h  MapEntry.cpp  MapEntry.h  MappedPeptides.cpp  MappedPeptides.h  PTMEntry.cpp  PTMEntry.h  PeptideCoordinates.cpp  PeptideCoordinates.h  PeptideEntry.cpp  PeptideEntry.h  PeptideMapperUtils.cpp  PeptideMapperUtils.h  PoGo  PossibleKeyGenerator.cpp  (+10 more)
PoGo/src/DataClasses/: ExistingPeptides.h  GeneEntry.cpp  GeneEntry.h  PTMEntry.cpp  PTMEntry.h  PeptideEntry.cpp  PeptideEntry.h  ProteinEntry.cpp  ProteinEntry.h
PoGo/src/Parsers/: FastaEntry.cpp  FastaEntry.h  FastaParser.cpp  FastaParser.h  GTFParser.cpp  GTFParser.h  ResultParser.cpp  ResultParser.h
PoGo/src/PeptideMapper/: KmereEntry.h  KmereMap.cpp  KmereMap.h  (+4 more)
(+15 files in other folders)
